deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: CI_PROJECT_NAME
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: CI_PROJECT_NAME
  template:
    metadata:
      annotations:
        kubernetes.io/change-cause: "CI_COMMIT_SHORT_SHA"
      labels:
        app: CI_PROJECT_NAME
    spec:
      containers:
        - name: CI_PROJECT_NAME
          image: jonascavalcantineto/CI_PROJECT_NAME:CI_COMMIT_REF_NAME
          imagePullPolicy: Always
          resources:
            requests:
              memory: "500Mi"
              cpu: "1024m"
            limits:
              memory: "6144Mi"
              cpu: "2048m"
          ports:
          - name: pback-8080
            containerPort: 8080
      nodeSelector:
        node-role.kubernetes.io/CI_COMMIT_REF_NAME: ""

---

apiVersion: v1
kind: Service
metadata:
  name: CI_PROJECT_NAME
spec:
  selector:
    app: CI_PROJECT_NAME
  ports:
    - name: pback-8080
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
    
---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: CI_PROJECT_NAME
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: CI_PROJECT_NAME
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: CI_PROJECT_NAME
              servicePort: 8080
